Bug Fixes / UI Updates
-Fixed logic bug where SelectedUserType was null.
-Added required parameters.
-Added parameters to prevent duplicate entries for username and emails.
-Added CSS for input boxes and radio buttons.

--- a/Clinic/Clinic/Views/Home/Index.cshtml
+++ b/Clinic/Clinic/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -8,10 +8,10 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>Home</title>
 </head>
 <body>
-    <div> 
+    <div>
     </div>
 </body>
 </html>
