--- a/Clinic/Clinic/Content/Registration.css
+++ b/Clinic/Clinic/Content/Registration.css
@@ -1,30 +1,59 @@
-﻿html {
-    font-family: sans-serif;
-    margin-left: 10px;
-}
-
-.form-group {
+﻿.form-group {
     margin-bottom: 15px;
 }
 
-.custom-button {
-    background-color: #007BFF;
-    color: #fff;
+.signupBtn {
+    width: 120px;
+    height: 40px;
+    margin-left: 130px;
+    border-radius: 30px;
     border: none;
-    padding: 10px 10%;
-    border-radius: 5px;
-    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 20px;
+    gap: 9px;
+    color: white;
+    background: linear-gradient(to right,rgb(128, 128, 255),rgb(183, 128, 255));
+    position: relative;
     cursor: pointer;
-    transition: background-color 0.3s; /* Add a smooth transition effect */
-    margin-left: 140px
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.212);
+}
+
+.arrow {
+    position: absolute;
+    right: 7.5px;
+    background-color: rgb(255, 255, 255);
+    width: 25px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+.signupBtn:hover .arrow {
+    animation: slide-in-left 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@keyframes slide-in-left {
+    0% {
+        transform: translateX(-10px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
 
 .form-control {
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #8080FF;
     border-radius: 5px;
     font-size: 16px;
-    width: 40%;
+    width: 20%;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     transition: border-color 0.3s;
 }
@@ -55,7 +84,7 @@
     display: inline-block;
     width: 16px;
     height: 16px;
-    border: 2px solid #3498db;
+    border: 2px solid #8080FF;
     border-radius: 50%;
     margin-right: 10px;
     margin-top: 10px;
@@ -65,7 +94,7 @@
 
 /* Style for the custom radio button when selected */
 .custom-radio.checked {
-    background-color: #3498db;
+    background-color: #8080FF;
 }
 
 /* Style for the label text */
@@ -98,6 +127,6 @@
 
 /* Style the custom radio button when selected */
 .check-group input[type="radio"]:checked + label .custom-radio::before {
-    background-color: #3498db;
+    background-color: #8080FF;
     opacity: 1;
 }
