--- a/Clinic/Clinic/Views/Home/Index.cshtml
+++ b/Clinic/Clinic/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Home</title>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 </head>
 <body>
     <div>
