--- a/Clinic/Clinic/Views/Registration/Index.cshtml
+++ b/Clinic/Clinic/Views/Registration/Index.cshtml
@@ -32,10 +32,8 @@
                 Patient
             </label>
         </div>
-
+        <hr />
         <div class="doctor-form">
-            <h4>Doctor</h4>
-            <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
                 <div class="col-md-10">
@@ -95,8 +93,6 @@
         </div>
 
         <div class="patient-form">
-            <h4>Patient</h4>
-            <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
                 <div class="col-md-10">
@@ -183,9 +179,12 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <button type="submit" class="custom-button">Register</button>
-        </div>
+        <button type="submit" class="signupBtn">
+            Sign Up
+            <span class="arrow">
+                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512" fill="rgb(183, 128, 255)"><path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"></path></svg>
+            </span>
+        </button>
     }
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
