--- a/Clinic/Clinic/Content/_Home.css
+++ b/Clinic/Clinic/Content/_Home.css
@@ -1,20 +1,32 @@
-﻿.form-group {
-    margin-bottom: 15px;
+﻿.cred-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
 }
 
-.form-control {
+.form-group {
+    width: 300px;
     padding: 10px;
+    margin-top: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    transition: border-color 0.3s;
     border: 1px solid #8080FF;
     border-radius: 5px;
     font-size: 16px;
-    width: 20%;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    transition: border-color 0.3s;
 }
 
-.form-control:focus {
-    border-color: #007BFF;
-    outline: none;
+.signupBtn {
+    width: 200px;
+    height: 40px;
+    border-radius: 30px;
+    border: none;
+    color: white;
+    background: linear-gradient(to right,rgb(128, 128, 255),rgb(183, 128, 255));
+    cursor: pointer;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.212);
 }
 
 /* Style for the button when clicked */
