--- a/Clinic/Clinic/Views/Registration/Index.cshtml
+++ b/Clinic/Clinic/Views/Registration/Index.cshtml
@@ -14,6 +14,13 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 </head>
 <body>
+    @if (TempData["SuccessMessage"] != null)
+    {
+        <div class="alert alert-success" style="color: green;">
+            @TempData["SuccessMessage"]
+        </div>
+    }
+
     @using (Html.BeginForm("Registration", "Registration", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
